# chess_engine_player

./: Cargo.toml  README.md
src/: engine.rs  error.rs  game.rs  main.rs  ui.rs
